only one layout can be active
